--- a/Exercice9.1
+++ b/Exercice9.1
@@ -1,7 +1,7 @@
 Module Exercice91
 
     Sub Main()
-    
+
         Dim note, somme, pourcentageSup10, moyenne, totalNotes, countSup10 As Double
 
         totalNotes = 0
@@ -59,7 +59,8 @@ Module Exercice91
         Console.WriteLine("Vous avez " + pourcentageSup10.ToString + "% de notes > à 10")
 
         Console.WriteLine("Votre moyenne est de " + moyenne.ToString)
+        Console.ReadLine()
 
     End Sub
-    
+
 End Module
