--- a/17.1
+++ b/17.1
@@ -1,4 +1,4 @@
-Module Module1
+Module Module17_1
     Sub Main()
         Dim monCompteur As New Compteur(10)
         Console.WriteLine("Valeur initiale : " & monCompteur.GetValeur())
